# database

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini  setup.cfg
docs/: README.md
src/database/: __init__.py  adapter.py  adapters.py  cache.py  client.py  connection.py  cursor.py  data.py  exceptions.py  handler.py  options.py  query.py  row.py  schema.py  sql.py  strategy.py  transaction.py  types.py  upsert.py  utils.py
src/database/adapters/: __init__.py  column_info.py  result_adapter.py  row_adapter.py  structure.py  type_adapters.py  type_conversion.py  type_converter.py  type_mapping.py
src/database/config/: type_mapping.py
src/database/core/: __init__.py  client.py  connection.py  cursor.py  exceptions.py  query.py  transaction.py
src/database/operations/: __init__.py  data.py  query.py  schema.py  upsert.py
src/database/strategy/: __init__.py  base.py  decorators.py  postgres.py  sqlite.py  sqlserver.py
src/database/utils/: __init__.py  auto_commit.py  cache.py  connection_utils.py  query_utils.py  schema_cache.py  sql.py  sql_generation.py  sqlserver_utils.py
tests/: config.py  conftest.py  test_client.py  utils.py
tests/architecture/: test_circular_dependencies.py  test_duplicate_integration.py  test_layering.py
tests/fixtures/: README.md  __init__.py  mocks.py  postgres.py  server.py  sqlalchemy_fixtures.py  sqlite.py  sqlserver.py  sqlserver_types.py  values.py
tests/integration/: __init__.py
tests/integration/common/: __init__.py  conftest.py  test_auto_commit.py  test_empty_results.py  test_parameters.py  test_select.py  test_transactions.py  test_upsert.py
tests/integration/postgres/: __init__.py  conftest.py  test_auto_commit.py  test_callproc.py  test_client.py  test_client_advanced.py  test_client_basic.py  test_column.py  test_conflict_columns.py  test_date_string_handling.py  test_empty_results.py  test_error_handling.py  test_numpy_pandas.py  test_parameters.py  test_procedures.py  test_schema_qualified.py  test_strategy_operations.py  test_transactions.py  test_type_handling.py  test_upsert.py
tests/integration/sqlite/: __init__.py  conftest.py  test_auto_commit.py  test_client_basic.py  test_numpy_pandas.py  test_sqlite_adapters.py  test_sqlite_memory_pool.py  test_sqlite_pragmas.py  test_sqlite_strategy.py  test_sqlite_strategy_ops.py  test_sqlite_transactions.py  test_type_handling.py  test_upsert.py
tests/integration/sqlserver/: __init__.py  test_auto_commit.py  test_client.py  test_client_basic.py  test_column.py  test_column_aliasing.py  test_numpy_pandas.py  test_procedures.py  test_transactions.py  test_type_handling.py  (+1 more)
tests/mocks/: __init__.py  test_sqlserver.py  test_sqlserver_types.py
tests/unit/: __init__.py  test_adapter_registration.py  test_adapters.py  test_auto_commit.py  test_column.py  test_connection_pool.py  test_connection_url.py  test_cursor_logging.py  test_data_loaders.py  test_in_clause_params.py  test_insert_chunking.py  test_like_clause_escaping.py  test_options.py  test_parameters.py  test_percent_escaping.py  test_postgres_index_parsing.py  test_row_adapter.py  test_schema_cache.py  test_sql.py  test_sql_generation.py  test_sqlalchemy_docs.py  test_sqlalchemy_integration.py  test_sqlserver_column_aliasing.py  test_sqlserver_utils.py  test_strategy_cache.py  test_type_handlers.py  test_type_mapping.py  test_type_resolver.py  test_utils.py
