[tool.poetry]
name = "database"
version = "0.1.2"
description = ""
authors = ["bissli <bissli@xyz.com>"]
readme = "README.md"
packages = [{ include = "database", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"

pandas = "*"
pyarrow = "*"
psycopg = { extras = ["binary"], version = "3.2.10" }
sqlalchemy = "^2.0.0"

cachetools = "*"
python-dateutil = "*"
libb-util = "*"

# == test
asserts = { version = "*", optional = true }
pytest = { version = "*", optional = true }
testcontainers = { extras = ["postgres"], version = ">=4.0.0", optional = true }
pytest-cov = { version = "^6.0.0", optional = true }
pytest-mock = { version = "*", optional = true }
pdbpp = { git = "https://github.com/pdbpp/pdbpp.git", optional = true }

[tool.poetry.extras]
test = [
  "asserts",
  "pytest",
  "testcontainers",
  "pytest-mock",
  "pytest-cov",
  "pdbpp"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
