[tool.poetry]
name = "database"
version = "0.1.8"
description = "Unified Python interface for PostgreSQL and SQLite over SQLAlchemy."
authors = ["bissli <bissli@xyz.com>"]
readme = "README.md"
license = "OSL-3.0"
keywords = ["database", "postgresql", "sqlite", "sqlalchemy", "psycopg"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
packages = [{ include = "database", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"

pandas = "*"
pyarrow = "*"
psycopg = { extras = ["binary"], version = "~3.2" }
sqlalchemy = "^2.0.0"

cachetools = "*"
python-dateutil = "*"
libb-util = "*"

# == test
asserts = { version = "*", optional = true }
pytest = { version = "*", optional = true }
testcontainers = { extras = ["postgres"], version = ">=4.0.0", optional = true }
pytest-cov = { version = "^6.0.0", optional = true }
pytest-mock = { version = "*", optional = true }
pdbpp = { git = "https://github.com/pdbpp/pdbpp.git", optional = true }

[tool.poetry.extras]
test = [
  "asserts",
  "pytest",
  "testcontainers",
  "pytest-mock",
  "pytest-cov",
  "pdbpp"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
